--- a/quickstart/php.mdx
+++ b/quickstart/php.mdx
@@ -49,12 +49,25 @@ $response = $client->content->submit([
     ]
 ]);
 
-if ($response->flagged) {
-    echo "Text content flagged\n";
-    // Block the content, show an error, etc...
-} else {
-    echo "Text content is safe.\n";
-    // Save to database or proceed...
+// Check if content was flagged
+if ($response->evaluation->flagged) {
+    echo "Content was flagged\n";
+}
+
+// Act on the recommendation
+switch ($response->recommendation->action) {
+    case 'allow':
+        echo "Text content is safe.\n";
+        // Save to database or proceed...
+        break;
+    case 'review':
+        echo "Text content needs review\n";
+        // Send to review queue
+        break;
+    case 'reject':
+        echo "Text content rejected\n";
+        // Block the content, show an error, etc...
+        break;
 }
 ```
 
@@ -78,12 +91,25 @@ $response = $client->content->submit([
     ]
 ]);
 
-if ($response->flagged) {
-    echo "Image content flagged: " . implode(', ', $response->labels) . "\n";
-    // Block or require review
-} else {
-    echo "Image is safe.\n";
-    // Save to database or proceed...
+// Check if content was flagged
+if ($response->evaluation->flagged) {
+    echo "Image was flagged\n";
+}
+
+// Act on the recommendation
+switch ($response->recommendation->action) {
+    case 'allow':
+        echo "Image is safe.\n";
+        // Save to database or proceed...
+        break;
+    case 'review':
+        echo "Image needs review\n";
+        // Send to review queue
+        break;
+    case 'reject':
+        echo "Image rejected\n";
+        // Block or require review
+        break;
 }
 ```
 
@@ -120,12 +146,25 @@ $response = $client->content->submit([
     ]
 ]);
 
-if ($response->flagged) {
-    echo "Object content flagged\n";
-    // Block or require review
-} else {
-    echo "Object is safe.\n";
-    // Save to database or proceed...
+// Check if content was flagged
+if ($response->evaluation->flagged) {
+    echo "Object was flagged\n";
+}
+
+// Act on the recommendation
+switch ($response->recommendation->action) {
+    case 'allow':
+        echo "Object is safe.\n";
+        // Save to database or proceed...
+        break;
+    case 'review':
+        echo "Object needs review\n";
+        // Send to review queue
+        break;
+    case 'reject':
+        echo "Object rejected\n";
+        // Block or require review
+        break;
 }
 ```
 
@@ -153,7 +192,7 @@ try {
         ]
     ]);
 
-    echo $response->flagged ? "Content flagged\n" : "Content is safe\n";
+    echo "Recommendation: " . $response->recommendation->action . "\n";
 
 } catch (BadRequestException $e) {
     echo "Invalid request: " . $e->getMessage();
