--- a/quickstart/typescript.mdx
+++ b/quickstart/typescript.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Content moderation with Node.js"
-sidebarTitle: "Node.js"
-description: "Learn how to moderate content using Moderation API's Node.js SDK"
+title: "Content moderation with TypeScript"
+sidebarTitle: "TypeScript"
+description: "Learn how to moderate content using Moderation API's TypeScript SDK"
 icon: node-js
 ---
 
