--- a/_snippets/sdks.mdx
+++ b/_snippets/sdks.mdx
@@ -1,23 +1,39 @@
 ## Official SDKs
 
-Moderation API’s server-side helper libraries (also known as server-side SDKs) reduce the amount of work required to use the REST APIs, starting with reducing the boilerplate code you have to write.
+Moderation API's server-side helper libraries (also known as server-side SDKs) reduce the amount of work required to use the REST APIs, starting with reducing the boilerplate code you have to write.
 
 <CardGroup cols={2}>
 
 <Card
-  title="Node library"
+  title="TypeScript / Node.js"
   icon="node-js"
-  href="https://www.npmjs.com/package/@moderation-api/sdk"
+  href="https://github.com/moderation-api/sdk-typescript"
 >
-  Library for Node.js with support for TypeScript.
+  Library for Node.js with full TypeScript support.
 </Card>
 
 <Card
-  title="Ruby gem"
-  icon="gem"
-  href="https://rubygems.org/gems/moderation_api"
+  title="Python"
+  icon="python"
+  href="https://github.com/moderation-api/sdk-python"
 >
-  Gem for Ruby.
+  Library for Python 3.9+ with sync and async clients.
+</Card>
+
+<Card
+  title="PHP"
+  icon="php"
+  href="https://github.com/moderation-api/sdk-php"
+>
+  Library for PHP 8.1+.
+</Card>
+
+<Card
+  title="Ruby"
+  icon="gem"
+  href="https://github.com/moderation-api/sdk-ruby"
+>
+  Gem for Ruby 3.2+ with Sorbet type definitions.
 </Card>
 
 </CardGroup>
